--- a/src/transactionsApiPresentation/try.yaml
+++ b/src/transactionsApiPresentation/try.yaml
@@ -65,6 +65,121 @@ paths:
           description: Invalid Fields
         '500':
           description: Internal Server Error
+
+/***A retravailler !!! ***/
+post:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Transactions API
+      description: Request for adding Transaction's additional informations
+      parameters:
+        - in: path
+          type: integer
+          name: transactionId
+          description: Id of transaction
+          required: true
+        - in: header
+          type: 'string'
+          name: Authorization
+          description: Attach Bearer JWT token
+          required: true
+        - in: body
+          name: body
+          description: addtionnal informations of created transcation
+          schema:
+            $ref: '#/definitions/TransactionAdditionalInfos'
+          required: true
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      responses:
+        '200':
+          description: Transaction additional informations created successully
+          schema:
+            $ref: '#/definitions/ApiResponseAdditionalInfos'
+        '400':
+          description: Invalid Fields
+        '500':
+          description: Internal Server Error
+
+    put:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Transactions API
+      description: Request for modifying Transaction's additional informations
+      parameters:
+        - in: path
+          type: integer
+          name: transactionId
+          description: Id of transaction
+          required: true
+        - in: header
+          type: 'string'
+          name: Authorization
+          description: Attach Bearer JWT token
+          required: true
+        - in: body
+          name: body
+          description: addtionnal informations of created transcation
+          schema:
+            $ref: '#/definitions/TransactionAdditionalInfos'
+          required: true
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      responses:
+        '200':
+          description: Transaction additional informations modified successully
+          schema:
+            $ref: '#/definitions/ApiResponseAdditionalInfos'
+        '400':
+          description: Invalid Fields
+        '500':
+          description: Internal Server Error
+
+    delete:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Transactions API
+      description: Request for deleting Transaction's additional informations
+      parameters:
+        - in: path
+          type: integer
+          name: transactionId
+          description: Id of transaction
+          required: true
+        - in: header
+          type: 'string'
+          name: Authorization
+          description: Attach Bearer JWT token
+          required: true
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      responses:
+        '200':
+          description: Transaction additional informations deleted successully
+          schema:
+            type: object
+            properties:
+              ApiResponse:
+                $ref: '#/definitions/ApiResponse'
+        '400':
+          description: Invalid Fields
+        '500':        
+          description: Internal Server Error
+/*** FIN ***/
+
+
 securityDefinitions:
   Bearer:
     type: apiKey
